human_written_tests/WebAssembly/processed_control_flow_validation/test_call_11.wast
(assert_invalid
  (module
    (func $type-first-empty-in-block
      (block (call 1))
    )
    (func (param i32))
  )
  "type mismatch"
)